2024-09-18   Alex Tutubalin <lexa@lexa.ru>
  * Fixed possible buffer overrun in old panasonic decoder
  * Most small buffer allocations: malloc changed to calloc to prevent 
    uninitialized heap data leaks
  * Large buffer allocation (RAW backing store, thumbnails store):
    If LIBRAW_CALLOC_RAWSTORE is defined on build: large buffers will be 
    allocated via calloc

2024-03-30  Alex Tutubalin <lexa@lexa.ru>

 LibRaw-snapshot-202403

 * Raw format support 
    1) Panasonic encoding 8

    2) Sony YCC (Medium/Small compression) pseudo-RAW support: 
      -- normal processing (3-channel RGB output)
      -- or YCbCr output if LIBRAW_RAWSPECIAL_SRAW_NO_RGB bit is set
         in imgdata.rawparams.specials (one may specify the 
         LIBRAW_RAWSPECIAL_SRAW_NO_INTERPOLATE flag too avoid Cb/Cr interpolation)
         Note: if YCbCr is selected, Cb/Cr neutral points are adjusted to 8192
         (to fit histogram/range area of the Y channel)
      -- RAW (pseudo-RAW) data is already white balanced, so 
         imgdata.color.as_shot_wb_applied is set to 
         LIBRAW_ASWB_APPLIED | LIBRAW_ASWB_SONY

    3) DNG 1.7 (including JPEG-XL compression) support via Adobe DNG SDK 1.7.x integration

    4) Canon CRN files: embedded RAW extracted

  * Camera support
     - Canon EOS R6 Mark II, EOS R8, EOS R50, EOS R100, EOS Ra
     - Fujifilm GFX100-II, X-T5, X-S20, X-H2, X-H2S: support of files with wrong metadata (pre 1.03 fw)
     - GoPro HERO11, HERO12 (via GoPro SDK)
     - Hasselblad X2D-100c
     - Leica Q3, M11 Monochrom
     - Nikon Z30, Z8 (HE/HE* formats are not supported)
     - OM Digital OM-5
     - Panasonic DC-G9 II, DC-ZS200D / ZS220D, DC-TZ200D / TZ202D / TZ220D, DC-S5-II, DC-GH6
     - Sony A7C-II, A7CR, ILCE-6700,  ZV-1M2, ZV-E1, ILCE-7RM5 (A7R-V), ILME-FX30,
          A1: support for files damaged by exiftool 
     - Multiple DJI and Skydio drones
     - tested with multiple smartphones with DNG format recorded.
